--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "guzzlehttp/guzzle": "~5.0",
     "guzzlehttp/guzzle-services": "^0.5.0",
     "webmozart/json": "^1.0",
-    "jms/serializer": "^0.16.0"
+    "jms/serializer": "^0.16.0",
+    "puli/repository": "^1.0@beta",
+    "symfony/filesystem": "~2.7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.7"
@@ -33,5 +35,5 @@
       "dev-master": "1.0-dev"
     }
   },
-  "minimum-stability": "stable"
+  "minimum-stability": "beta"
 }
