--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     "guzzlehttp/guzzle-services": "^0.5.0",
     "webmozart/json": "^1.0",
     "jms/serializer": "^0.16.0",
-    "puli/repository": "^1.0@beta",
-    "symfony/filesystem": "~2.7.0"
+    "puli/repository": "^1.0@beta"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.7"
+    "phpunit/phpunit": "^4.7",
+    "symfony/filesystem": "~2.7.0"
   },
   "autoload": {
     "psr-4": {
