--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: php
 
-php: [5.6, nightly]
-
-matrix:
-    allow_failures:
-        - php: nightly
+php: [5.6, 7.0]
 
 before_script:
   - composer install --prefer-source --no-interaction --no-progress
@@ -12,6 +8,3 @@ before_script:
 
 script:
   - phpunit -v --coverage-clover=coverage.clover
-
-#after_script:
-#  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi;'
