--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "puli/repository": "^1.0@beta"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.7",
-    "symfony/filesystem": "~2.7.0"
+    "phpunit/phpunit": "^5.0"
   },
   "autoload": {
     "psr-4": {
