--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "guzzlehttp/guzzle": "~6.0",
-    "guzzlehttp/guzzle-services": "dev-guzzle6@dev",
+    "guzzlehttp/guzzle-services": "dev-guzzle6",
     "webmozart/json": "^1.0",
     "jms/serializer": "^1.0",
     "puli/repository": "^1.0@beta"
@@ -34,5 +34,6 @@
     "branch-alias": {
       "dev-master": "1.0-dev"
     }
-  }
+  },
+  "minimum-stability": "beta"
 }
